# so-lenspipe

./: .gitignore  HISTORY.rst  README.md  README.rst  bias.py  meson.build  pipeline.yml  pyproject.toml  setup.cfg  setup.py  sims.py  test.py  workflow.txt
.github/: ISSUE_TEMPLATE.md
data/: N0_analytical.txt  tsz_profile.txt  tsz_profile5000.txt
docs/: conf.py  index.rst  staging.rst  tasks.rst  testing.rst
examples/: 4split_auto.py  4split_rdn0.py  bias.py  bias_hardening.py  checkPH.py  curl_demo.ipynb  mask_harden.py  rdn0.py  verify.py  verify_ksz.py  verify_shear.py
examples/N1/: noise_dict.npy  theory_n1.py
fortran/: LensingBiases.f90
input/: config.yml  config_template.yml
solenspipe/: __init__.py  analysis_tools.py  bias.py  biastheory.py  filtering.py  foregrounds.py  meson.build  preprocessing.py  preprocessing_debug.py  sandbox_extensions.py  solenspipe.py  theory.py  utility.py
tests/: test_norm.py
